--- a/index.html
+++ b/index.html
@@ -798,6 +798,18 @@
 						<!-- Each new year -->
 						<div class="row mt-2 language">
 							<!-- Year -->
+							<h2 class="academic-year-h2">2025</h2>
+
+							<div class="academic-block mt-4">
+								<div class="lucida-console h5 academic-name"> <span data-en="Multi-core and Purpose-built Architectures" data-es="Arquitecturas Multinúcleo y de Propósito Específico (AMPE)"></span></div>
+								<div class="academic-rol mt-1"><span data-en="Teaching Assistant" data-es="Profesor de Prácticas"></span></div>
+								<div class="academic-year">3.00 ECTS. <span data-en="January 2025 - June 2025" data-es="Enero 2025 - Junio 2025"></span></div>
+								<div class="mt-1"><a href="https://twitter.com/AMPE_UMU" target="_blank" class="link-dark"><i class="fa-brands fa-twitter"></i></a></div>
+							</div>
+						</div>
+
+						<div class="row mt-4 language">
+							<!-- Year -->
 							<h2 class="academic-year-h2">2024</h2>
 
 							<div class="academic-block">
