--- a/index.html
+++ b/index.html
@@ -607,6 +607,27 @@
 
 						<!-- Each new year -->
 						<div class="row mt-3">
+							<h2 class="pub-year-h2">2025</h2>
+
+							<!-- Each new publication inside the given year -->
+							<div class="pub-block">
+								<!-- Title -->
+								<div class="lucida-console h5">ACTA: Automatic Configuration of the Tensor Memory Accelerator for High-End GPUs</div>
+								<!-- Authors -->
+								<div class="pub-authors mt-1"><span class="pub-author">Nicolás Meseguer</span>, Yifan Sun, Michael Pellauer, José L. Abellán, Manuel E. Acacio</div>
+								<!-- Place -->
+								<div class="pub-congress">The 17th Workshop on General Purpose Processing using GPU (GPGPU 2025), Las Vegas, Nevada, USA, March 2025.</div>
+								<!-- Links -->
+								<div class="mt-1">
+									<span> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2025GPGPU-ACTA-Presentation.pdf" target="_blank" class="link-dark ">Paper</a> </span>
+									<span class="pub-force-margin-left"> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2025GPGPU-ACTA-Presentation.pdf" target="_blank" class="link-dark ">Presentation</a> </span>
+									<!-- This <a> with id citation, will automatically copy to the clipboard the bibtex citation -->
+								</div>
+							</div>
+						</div>
+
+						<!-- Each new year -->
+						<div class="row mt-3">
 							<h2 class="pub-year-h2">2023</h2>
 
 							<!-- Each new publication inside the given year -->
