Updated the paper URL

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 								<div class="pub-congress">The 17th Workshop on General Purpose Processing using GPU (GPGPU 2025), Las Vegas, Nevada, USA, March 2025.</div>
 								<!-- Links -->
 								<div class="mt-1">
-									<span> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2025GPGPU-ACTA-Presentation.pdf" target="_blank" class="link-dark ">Paper</a> </span>
+									<span> <i class="fa-regular fa-arrow-up-right-from-square"></i> <a href="https://dl.acm.org/doi/10.1145/3725798.3725802" target="_blank" class="link-dark ">Paper</a> </span>
 									<span class="pub-force-margin-left"> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2025GPGPU-ACTA-Presentation.pdf" target="_blank" class="link-dark ">Presentation</a> </span>
 									<!-- This <a> with id citation, will automatically copy to the clipboard the bibtex citation -->
 								</div>
