Updated the CV and added the publications

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 						</div>
 
 						<div class="col-10">
-							<a href="assets/documents/NicolasMeseguerCV.pdf" class="link-dark" target="_blank" data-es="CV [Actualizado 03/2024]" data-en="CV [Updated 03/2024]"></a>
+							<a href="assets/documents/NicolasMeseguerCV.pdf" class="link-dark" target="_blank" data-es="CV [Actualizado 06/2025]" data-en="CV [Updated 06/2025]"></a>
 						</div>
 					</div>
 
@@ -612,6 +612,35 @@
 							<!-- Each new publication inside the given year -->
 							<div class="pub-block">
 								<!-- Title -->
+								<div class="lucida-console h5">Configuración Automática del TMA para GPUs de Alto Rendimiento</div>
+								<!-- Authors -->
+								<div class="pub-authors mt-1"><span class="pub-author">Nicolás Meseguer</span>, Yifan Sun, Michael Pellauer, José L. Abellán, Manuel E. Acacio</div>
+								<!-- Place -->
+								<div class="pub-congress">XXXV Jornadas de Paralelismo, Sevilla (Spain), June 2025.</div>
+								<!-- Links -->
+								<div class="mt-1">
+									<span> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2025SARTECO-ACTA.pdf" target="_blank" class="link-dark ">Paper</a> </span>
+									<span class="pub-force-margin-left"> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2025SARTECO-ACTA-Presentation.pdf" target="_blank" class="link-dark ">Presentation</a> </span>
+									<!-- This <a> with id citation, will automatically copy to the clipboard the bibtex citation -->
+									<span class="pub-force-margin-left"> <i class="fas fa-quote-left"></i> <a href="#" id="citation" class="link-dark">BibTeX</a> </span>
+								</div>
+								<!-- Citation -->
+								<div class="d-none">
+@article{2025acta,
+	author = {Meseguer, Nicolas and Sun, Yifan and Pellauer, Michael and Abellán, José L. and Acacio, Manuel E.},
+	year = {2025},
+	month = {June},
+	title = {Configuración Automática del TMA para GPUs de Alto Rendimiento},
+	journal = {XXXV Jornadas de Paralelismo},
+	volume = {XX},
+	pages = {X--X},
+	isbn = {XXX-XX-XXXX-XXX-X}
+}</div>
+							</div>
+
+							<!-- Each new publication inside the given year -->
+							<div class="pub-block mt-4">
+								<!-- Title -->
 								<div class="lucida-console h5">ACTA: Automatic Configuration of the Tensor Memory Accelerator for High-End GPUs</div>
 								<!-- Authors -->
 								<div class="pub-authors mt-1"><span class="pub-author">Nicolás Meseguer</span>, Yifan Sun, Michael Pellauer, José L. Abellán, Manuel E. Acacio</div>
@@ -668,7 +697,7 @@
 								<div class="pub-authors mt-1"><span class="pub-author">Nicolás Meseguer-Iborra</span>, Francisco Muñoz-Martínez, José L. Abellán, Manuel E. Acacio</div>
 								<div class="pub-congress">XXXII Jornadas de Paralelismo, Alicante (Spain), September 2022.</div>
 								<div class="mt-1">
-									<span> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2022CPU-PCGCN.pdf" target="_blank" class="link-dark ">PDF</a> </span>
+									<span> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2022CPU-PCGCN.pdf" target="_blank" class="link-dark ">Paper</a> </span>
 									<span class="pub-force-margin-left"> <i class="fas fa-quote-left"></i> <a href="#" id="citation" class="link-dark">BibTeX</a> </span>
 								</div>
 								<div class="d-none">
@@ -693,7 +722,7 @@
 								<div class="pub-authors mt-1"><span class="pub-author">Nicolás Meseguer-Iborra</span>, Francisco Muñoz-Martínez, Manuel E. Acacio, José L. Abellán</div>
 								<div class="pub-congress">XXXI Jornadas de Paralelismo, Málaga (Spain), September 2021.</div>
 								<div class="mt-1">
-									<span> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2021DLRM.pdf" target="_blank" class="link-dark">PDF</a> </span>
+									<span> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2021DLRM.pdf" target="_blank" class="link-dark">Paper</a> </span>
 									<span class="pub-force-margin-left"> <i class="fas fa-quote-left"></i> <a href="#" id="citation" class="link-dark">BibTeX</a> </span>
 								</div>
 								<div class="d-none">
