--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 						</div>
 
 						<div class="col-10">
-							<a href="https://github.com/NicolasMeseguer" class="link-dark" target="_blank">GitHub</a>
+							<a href="https://github.com/trungvphan" class="link-dark" target="_blank">GitHub</a>
 						</div>
 					</div>
 				</div>
@@ -755,6 +755,7 @@
 		<script src="assets/js/main.js"></script>
 
 	</body>
+
 
 
 </html>
