--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 						<div class="col-10">
 							<a href="https://drive.google.com/file/d/1NfFS5Qt9TSUTZvaQ5Xa-XCNrxTQwda_2/view" class="link-dark" target="_blank">
-								CV [Updated 2025]
+								CV [Updated 09/2025]
 							</a>
 						</div>
 					</div>
@@ -759,3 +759,4 @@
 
 
 </html>
+
