Add school link

--- a/index.html
+++ b/index.html
@@ -166,6 +166,26 @@
 					</div>
 
 					<div class="row mb-2">
+  						<div class="col-1">
+    						<i class="fas fa-school" aria-hidden="true"></i>
+  						</div>
+
+  						<div class="col-10">
+    						<a href="https://www.pitzer.edu/trung-average-v-phan" class="link-dark" target="_blank">School</a>
+  						</div>
+					</div>
+
+					<div class="row mb-2">
+  						<div class="col-1">
+    						<i class="fas fa-school" aria-hidden="true"></i>
+  						</div>
+
+  						<div class="col-10">
+    						<a href="https://www.scrippscollege.edu/offices/profile/trung-phan" class="link-dark" target="_blank">School</a>
+  						</div>
+					</div>
+
+					<div class="row mb-2">
 						<div class="col-1">
 							<i class="fab fa-github" aria-hidden="true"></i>
 						</div>
@@ -749,6 +769,7 @@
 
 
 </html>
+
 
 
 
