--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 							<br/>
 							Office: E187
 							<br/>
-							Lab: E155
+							Lab: E155, E275
 						</div>
 					</div>
 
@@ -769,6 +769,7 @@
 
 
 </html>
+
 
 
 
