--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   						</div>
 
   						<div class="col-10">
-    						<a href="https://www.pitzer.edu/trung-average-v-phan" class="link-dark" target="_blank">School</a>
+    						<a href="https://www.pitzer.edu/trung-average-v-phan" class="link-dark" target="_blank">Pitzer College website</a>
   						</div>
 					</div>
 
@@ -181,7 +181,7 @@
   						</div>
 
   						<div class="col-10">
-    						<a href="https://www.scrippscollege.edu/offices/profile/trung-phan" class="link-dark" target="_blank">School</a>
+    						<a href="https://www.scrippscollege.edu/offices/profile/trung-phan" class="link-dark" target="_blank">Scripps College website</a>
   						</div>
 					</div>
 
@@ -751,6 +751,10 @@
 								</li>
 
 							</ul>
+
+							<p class="mt-4 justify">More students may join later throughout the semester: Siyue (Stella) Zhu, Will Hammond.</p>
+
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -769,6 +773,7 @@
 
 
 </html>
+
 
 
 
